--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <html>
+    <head>
+        <title>Travel Sri Lanka</title>
+        <link rel="stylesheet" href= "CSS/Main.css">
+    </head>
+
+    
+    <body>
+        <h1>Discover A<Br>Different Island</h1>
+        
+
+    </body>
 
 
 </html>
