--- a/Where to go.html
+++ b/Where to go.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Where To Go</title>
-        
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
     </head>
 
 
