--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <html>
     <head>
         <title>Travel Sri Lanka</title>
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "CSS/Main.css">
     </head>
 
     
     <body>
-        <h1>Discover A<Br>Different Island</h1>
-        
+        <div class="discover">
+            Discover A<Br>Different Island
+        </div>
 
+        <button type="button">Explore More</button>
+
+
+        <h2>Ayubowan !<Br>Welcome to Sri Lanka</h2>
+
+            <img src="Assets/welcome.jpeg" alt="Welcome to Sri Lanka" width="800" height="320">
+
+            <div class="welcomesl">
+                Ayubowan and Welcome back to the paradise island of Sri Lanka. As we open our doors to the world once again ; we've pulled out all the stops, ensuring that every precautionary measure has been set in place to make your island getaway as safe, secure and serene as possible. In your preparation to explore the wild and wonderful, we'd like to bring your attention to the 'things you need to know ' for your safety as you make your way to an amazing time that is So Sri Lanka!
+            </div>
+
+            <div class="welcomeagain">
+                We are so looking forward to welcome you!
+            </div>
+
+            <div class="Wheretogo">
+                <h1> Where to go </h1>
+            </div>
     </body>
 
 
