--- a/news.html
+++ b/news.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Sri Lanka - Tourism News</title>
-        
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
     </head>
 
     <body>
