--- a/Hotels.html
+++ b/Hotels.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Hotels</title>
-        
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
     </head>
 
     <body>
