--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>About Us</title>
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         
     </head>
 
