--- a/about.html
+++ b/about.html
@@ -5,4 +5,15 @@
         
     </head>
 
+<body>
+    <h1>About Us</h1>
+
+    <b>Travel Sri Lanka</b> is Sri Lankan Tourism Website. The main purpose of the website is to improve tourism Industry in Sri Lanka. In the same manner anyone with access to the website can update the latest news in tourism industry in Sri Lanka.
+    <br> <br>
+    Content posted on <b>Travel Sri Lanka</b> is carefully curated and sourced from the Internet, including other tourism industry news websites and even local news are also being posted.
+    <br> <br> <br>
+    © 2022 Travel Sri Lanka. All rights reserved. Made in Sri Lanka 
+</body>
+
+
 </html>
