--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     
     <body>
+
         <div class="discover">
             Discover A<Br>Different Island
         </div>
@@ -30,6 +31,11 @@
                 <h1> Where to go </h1>
             </div>
 
+
+            <h1>Hotels</h1>
+
+
+            <h1>See What's New in Sri Lanka Tourism Industry</h1>
 
             
     </body>
