--- a/hotels.html
+++ b/hotels.html
@@ -2,9 +2,32 @@
     <head>
         <title>Hotels</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
+        <link rel="stylesheet" href= "CSS/Main.css">
     </head>
 
     <body>
+
+        <div class="header">
+            <div class="wrap">
+                <div class="logo">
+                    <a href="index.html"> 
+                        <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
+                        
+                        </a>
+                </div>
+                <div class="top-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="places.html">Where To Go</a></li>
+                        <li class="active"><a href="hotels.html">Hotels</a></li>
+                        <li><a href="news.html">What's New</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="clear"> </div>
+            </div>
+        </div> 
+
         <h1>Hotels</h1>
         
 
