--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <link rel="stylesheet" href= "CSS/Main.css">
     </head>
 
+<body>
+
     <div class="header">
         <div class="wrap">
             <div class="logo">
@@ -27,7 +29,7 @@
         </div>
     </div> 
 
-
+</body>
 
 
 </html>
