--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sri Lanka - Tourism News</title>
+        <title>Upcoming Events in Sri Lanka</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "CSS/Main.css">
     </head>
@@ -20,7 +20,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="places.html">Where To Go</a></li>
                         <li><a href="hotels.html">Hotels</a></li>
-                        <li class="active"><a href="news.html">What's New</a></li>
+                        <li class="active"><a href="news.html">Upcoming Events</a></li>
                         <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
@@ -28,7 +28,7 @@
             </div>
         </div> 
 
-        <h1><b>Whats's New - Sri Lanka Tourism Industry</b></h1>
+        <h1><b>Upcoming Events in Sri Lanka</b></h1>
         
 
     </body>
