--- a/places.html
+++ b/places.html
@@ -3,6 +3,9 @@
         <title>Where To Go</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "CSS/Main.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="widthdevice-width, initial-scale=1,0">
     </head>
 
 
@@ -22,7 +25,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="places.html">Where To Go</a></li>
                         <li><a href="hotels.html">Hotels</a></li>
-                        <li><a href="news.html">What's New</a></li>
+                        <li><a href="news.html">Upcoming Events</a></li>
                         <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
@@ -32,6 +35,8 @@
 
         <h1>Where To Go</h1>
         
+
+      </div>
 
     </body>
 
