--- a/Places Info/adamspeak.html
+++ b/Places Info/adamspeak.html
@@ -23,7 +23,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="places.html">Where To Go</a></li>
                         <li><a href="hotels.html">Hotels</a></li>
-                        <li><a href="news.html">What's New</a></li>
+                        <li><a href="news.html">Upcoming Events</a></li>
                         <li><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
