--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="places.html">Where To Go</a></li>
                     <li><a href="hotels.html">Hotels</a></li>
-                    <li><a href="news.html">What's New</a></li>
+                    <li><a href="news.html">Upcoming Events</a></li>
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
