navigation errors fixed

--- a/Events.html
+++ b/Events.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Upcoming Events in Sri Lanka</title>
+        <title>Cultural Festivals - Travel Sri Lanka</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "/CSS/Main.css">
     </head>
