--- a/hotels.html
+++ b/hotels.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hotels</title>
+        <title>Hotels - Travel Sri Lanka</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "CSS/Main.css">
     </head>
