--- a/news.html
+++ b/news.html
@@ -1,1 +1,10 @@
-<script id="replace_with_navbar" src="nav.js"></script>
+<html>
+    <head>
+        <title>Tourism News - Travel Sri Lanka</title>
+        <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
+        <link rel="stylesheet" href= "/CSS/Main.css">
+    </head>
+
+    <body>
+        <script id="replace_with_navbar" src="nav.js"></script>
+    </body>
