--- a/places.html
+++ b/places.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Where To Go</title>
+        <title>Where To Go - Travel Sri Lanka</title>
         <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
         <link rel="stylesheet" href= "CSS/Main.css">
         <meta charset="UTF-8">
