--- a/Places Info/Ridee Viharaya.html
+++ b/Places Info/Ridee Viharaya.html
@@ -9,27 +9,7 @@
 
 
     <body>
-
-        <div class="header">
-            <div class="wrap">
-                <div class="logo">
-                    <a href="index.html"> 
-                        <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
-                        
-                        </a>
-                </div>
-                <div class="top-nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="places.html">Where To Go</a></li>
-                        <li><a href="hotels.html">Hotels</a></li>
-                        <li><a href="news.html">Upcoming Events</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                    </ul>
-                </div>
-                <div class="clear"> </div>
-            </div>
-        </div> 
+        <script id="replace_with_navbar" src="nav.js"></script>
 
 
 
