Header and Footer Added to all pages

--- a/Events.html
+++ b/Events.html
@@ -7,7 +7,7 @@
 
     <body>
 
-        <script id="replace_with_navbar" src="nav.js"></script>
+      <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
 
 
         <h1><b>Upcoming Cultural Festivals in Sri Lanka</b></h1>
@@ -72,6 +72,9 @@
             </div>
         </a>
 
+
+        <br> <br>
+        <script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>
     </body>
 
 </html>
