--- a/Events/vesak.html
+++ b/Events/vesak.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Vesak Festival</h1>
 
@@ -30,7 +30,8 @@ Stalls on the roadside distribute free refreshments to passers-by and there are 
             <img src="/Assets/Vesak-Festival-2020-02.jpg" alt="vesak">
         </p>
         
-
+        <br> <br>
+        <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
 
 </html>
