--- a/Places Info/Bundala National Park.html
+++ b/Places Info/Bundala National Park.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Bundala National Park</h1>
 
@@ -22,6 +22,7 @@
 Best time to visit is September to March: during this period, migratory birds arrive at the park. The ecological areas of the national park contain seven terrestrial habitat types and six wetland types. A total of 383 plant species belonging to 90 families have been recorded from the park. In the small degraded patch of mangrove found at the Bundala lagoon area, black mangrove trees are widespread. The strip of Palu (Manilkara hexandra) tree forest on the sand-dunes east of Bundala village is a unique type of forest in Sri Lanka. The Bundala National Park has been identified as an outstanding Important Bird Area in the South Indian and Sri Lankan wetlands. 324 species of vertebrates have been recorded in the national park, which include 32 species of fish, 15 species of amphibians, 48 species of reptiles, 197 species of birds and 32 species of mammals. 52 species of butterflies are among the invertebrates. The wetland habitats in Bundala harbors about 100 species of water birds, half of them being migrant birds. Of 197 avifaunal species 58 are migratory species. A few Asian elephants still inhabit the forests of Bundala. Other mammals seen in the park are toque macaque, common langur, jackal, leopard, fishing cat, rusty-spotted cat, mongoose, wild boar, mouse deer, Indian muntjac, spotted deer, sambar, black-napped hare, Indian pangolin, and porcupine.
     </div>
 
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
     </html>
