--- a/Places Info/Dambulla CaveTemple.html
+++ b/Places Info/Dambulla CaveTemple.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Dambulla CaveTemple</h1>
 
@@ -22,8 +22,8 @@
 
 
     
-        
-
+        <br> <br>
+        <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
 
 </html>
