--- a/Places Info/Diyaluma Falls.html
+++ b/Places Info/Diyaluma Falls.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Diyaluma Falls</h1>
 
@@ -24,7 +24,7 @@ As all the passes were guarded the young man let down a rope of twisted creepers
 At 171 m, Diyaluma Ella Falls is the third largest waterfall in Sri Lanka. The torrent of water cascades to the plateau of Koslanda and during the rain, it is a spectacular view.
 Cascades is located along the Koslanda-Wellawaya road in the district of Badulla. Koslanda is the closest town in the fall, 6 km, and Wellawaya is 13 km.
     </div>
-
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
     </html>
