--- a/Places Info/Rawana ella and Ravana falls.html
+++ b/Places Info/Rawana ella and Ravana falls.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Rawana Ella and Rawana Falls</h1>
 
@@ -24,7 +24,7 @@ This Ravana Ella waterfall 40m in height and it flows to “Ho Oya”. 
 This Ravana Ella and Ravana Falls surround with greenish environment. This gorgeous waterfall flows face to the main road, ella – wellawaya.
 Ravana Ella located 11km away from Bandarawela. It is about 215 km from Colombo, balangoda and bandarawela route. Best time to visit this falls last few days of rainy season or just after.
     </div>
-
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
     </html>
