--- a/Places Info/Ridee Viharaya.html
+++ b/Places Info/Ridee Viharaya.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
 
 
@@ -24,7 +24,7 @@
             Ridi Vihara or the Silver Temple was built at the place where Silver ore was found, that was made used to build Ruwanweli Dageba at Anuradhapura by King Dutugemunu during his rein.Ridi Vihara is an important Raja Maha Vihara belonging to the Cultural Triangle. Historical Data on this Monastery complex is found in some Caves written in Brahmin Inscriptions. 
 They dates back to the 2nd and 3rd Centuries BC. During the time of Arahath Mahinda, many Arahaths are believed to be resided in these caves which numbers around twenty five in the surrounding area of Ridi Vihara and Rambadagalla area. The caves had been prepared by cutting into the rock and donated by chieftains of the area to the Sangha. The Ridi Vihara temple was built later by King Dutugemunu and the details about the construction is mainly being known by the historical chronicle Mahavamsa and by other sources like Ridi Vihara Asna and also by legend
     </div>
-
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
     </html>
