--- a/about.html
+++ b/about.html
@@ -6,9 +6,8 @@
     </head>
 
 <body>
+    <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
 
-    <script id="replace_with_navbar" src="nav.js"></script>
-        
     
 <div class="para">
     <h1>About Us</h1>
@@ -20,6 +19,8 @@
     © 2022 Travel Sri Lanka. All rights reserved. Made in Sri Lanka
 </div>
 
+<br> <br>
+<script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>
 </body>
 
 
