--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     </head>
 
 <body>
-    <script id="replace_with_navbar" src="nav.js"></script>
+    <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
 
+
+
+
+
+    <br> <br>
+    <script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>
 </body>
 
 
