--- a/places.html
+++ b/places.html
@@ -12,13 +12,14 @@
 
     <body>
 
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
 
         <h1>Where To Go</h1>
         
 
-      </div>
 
+      <br> <br>
+      <script id="replace_with_navbar" src="/Navigation Bars/footer.js"></script>
     </body>
 
 </html>
