--- a/Events/Esalaperahara.html
+++ b/Events/Esalaperahara.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Kandy Esala Perahera</h1>
 
@@ -22,7 +22,8 @@
         </div>
         
         
-
+        <br> <br>
+        <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
 
 </html>
