--- a/Events/poson.html
+++ b/Events/poson.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Poson Festival</h1>
 
@@ -26,7 +26,8 @@ On Poson poya day, many devotees make their way to temple to spend reflective ho
         </div>
         
         
-
+        <br> <br>
+        <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
 
 </html>
