--- a/Places Info/Delft Temple.html
+++ b/Places Info/Delft Temple.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Delft Temple</h1>
 
@@ -21,7 +21,7 @@
             In a corner of the island, the base of a stupa is found along with the remnants of four subordinate stupas surrounding it. Legend has it that this was the location where ArhatSangamittaTheri rested during her voyage to the island carrying the sacred sapling of the Bo tree. <br><br>
             The stupa is said to have been built by the Buddhists who resided in the island at that time. Situated closed to the sea the location also provides a panoramic view to the distant sea and beyond.
     </div>
-
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
     </html>
