--- a/Places Info/adamspeak.html
+++ b/Places Info/adamspeak.html
@@ -9,7 +9,7 @@
 
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="../Navigation Bars/nav.js"></script>
 
         <h1>Adams Peak</h1>
 
@@ -39,7 +39,8 @@
 
     
         
-
+    <br> <br>
+    <script id="replace_with_navbar" src="../Navigation Bars/footer.js"></script>
     </body>
 
 </html>
