--- a/hotels.html
+++ b/hotels.html
@@ -7,10 +7,13 @@
 
     <body>
 
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
 
         <h1>Hotels</h1>
         
 
+
+        <br> <br>
+        <script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>
     </body>
 </html>
