--- a/news.html
+++ b/news.html
@@ -6,5 +6,10 @@
     </head>
 
     <body>
-        <script id="replace_with_navbar" src="nav.js"></script>
+        <script id="replace_with_navbar" src="/Navigation Bars/nav.js"></script>
+
+
+
+        <br> <br>
+        <script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>
     </body>
