--- a/hotels.html
+++ b/hotels.html
@@ -158,42 +158,50 @@
     </div>
 
 </div>
-<footer class="site-footer" style="background-color: #4f5050">
+<br><br>
+<footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
     <br>
     <div class="row">
-        <div class="col-4" style="text-align: center">
-            <h3 style="font-family: Lobster">Visit Sri Lanak</h3>
+        <div class="col-2" style="text-align: right">
+            <img src="Assets/Favicon.png" style="height: auto; width: 40%">
         </div>
-        <div class="col-4" style="text-align: center">
-            <!--                <h3 style="font-family: Lobster">Visit Sri Lanak</h3>-->
+        <div class="col-6" style="text-align: left">
+            <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
         </div>
         <div class="col-4">
             <div class="row">
-                <div class="col-4" style="text-align: center">
+                <div class="col-4" style="text-align: left">
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="places.html">Where To Go</a></li>
-                        <li><a href="hotels.html">Hotels</a></li>
+                        <li><a href="index.html" id="footerlink">Home</a></li>
+                        <li><a href="places.html" id="footerlink">Where To Go</a></li>
+                        <li><a href="hotels.html" id="footerlink">Hotels</a></li>
                     </ul>
                 </div>
 
-                <div class="col-4" style="text-align: center">
+                <div class="col-4" style="text-align: left">
                     <ul class="footer-links">
-                        <li><a href="Events.html">Cultural Festivals</a></li>
-                        <li><a href="news.html">Tousrism News</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
+                        <li><a href="news.html" id="footerlink">Tousrism News</a></li>
+                        <li><a href="about.html" id="footerlink">About Us</a></li>
                     </ul>
                 </div>
             </div>
+            <br>
+            <div class="row" style="text-align: right;">
+                <img src="Assets/social/facebook.png" id="footericon">
+                <img src="Assets/social/whatsapp.png" id="footericon">
+                <img src="Assets/social/instagram.png" id="footericon">
+                <img src="Assets/social/twitter.png" id="footericon">
+                <img src="Assets/social/youtube.png" id="footericon">
+
+            </div>
         </div>
-
-
     </div>
-    <hr>
+    <hr style="color: white">
     <div class="row">
         <div class="col-12" style="text-align: center">
-            <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
-                <a href="#">Travel Sri Lanka</a>.
+            <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
+                <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
             </p>
         </div>
     </div>
