--- a/places.html
+++ b/places.html
@@ -218,7 +218,7 @@
         <br>
     </div>
 
-    </div>
+</div>
 
 
 </body>
@@ -321,7 +321,20 @@
                 <!--                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
             </div>
             <div class="modal-body">
-                Located in central Sri Lanka, the Rangiri Dambulla Cave Temple is a living Buddhist site that is focused on a series of five cave shrines. Inhabited by forest-dwelling Buddhist monks since the 3rd century BCE, these natural caves have been transformed continuously throughout the historical period into one of the largest and most outstanding Buddhist complexes in the Southern and South Eastern Asian region, showcasing innovative approaches to interior layout and decoration. In keeping with a longstanding tradition associated with living Buddhist ritual practices and continuous royal patronage, the cave shrines underwent several renovation and refurbishing programmes before assuming their present interior forms in the 18th century. The vast internal spaces of the cave shrines are not compartmentalized, but are spatially differentiated by a deliberate and subtle arrangement of polychrome sculpture of exceptional craftsmanship and decorated with brilliant compositions of mural paintings. This spatial hierarchy and purposive interior layout devoid of physical divisions lead the devotees systematically through the spaces from one ritual function to the next. The site is remarkable in the Buddhist world for its association with the continuous tradition of living Buddhist ritual practices and pilgrimage for more than two millennia.
+                Located in central Sri Lanka, the Rangiri Dambulla Cave Temple is a living Buddhist site that is focused
+                on a series of five cave shrines. Inhabited by forest-dwelling Buddhist monks since the 3rd century BCE,
+                these natural caves have been transformed continuously throughout the historical period into one of the
+                largest and most outstanding Buddhist complexes in the Southern and South Eastern Asian region,
+                showcasing innovative approaches to interior layout and decoration. In keeping with a longstanding
+                tradition associated with living Buddhist ritual practices and continuous royal patronage, the cave
+                shrines underwent several renovation and refurbishing programmes before assuming their present interior
+                forms in the 18th century. The vast internal spaces of the cave shrines are not compartmentalized, but
+                are spatially differentiated by a deliberate and subtle arrangement of polychrome sculpture of
+                exceptional craftsmanship and decorated with brilliant compositions of mural paintings. This spatial
+                hierarchy and purposive interior layout devoid of physical divisions lead the devotees systematically
+                through the spaces from one ritual function to the next. The site is remarkable in the Buddhist world
+                for its association with the continuous tradition of living Buddhist ritual practices and pilgrimage for
+                more than two millennia.
                 </p>
             </div>
             <div class="modal-footer">
@@ -438,42 +451,52 @@
         </div>
     </div>
 </div>
-<footer class="site-footer" style="background-color: #4f5050">
+<br><br>
+<footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
     <br>
     <div class="row">
-        <div class="col-4" style="text-align: center">
-            <h3 style="font-family: Lobster">Visit Sri Lanak</h3>
+        <div class="col-2" style="text-align: right">
+            <img src="Assets/Favicon.png" style="height: auto; width: 40%">
         </div>
-        <div class="col-4" style="text-align: center">
-            <!--                <h3 style="font-family: Lobster">Visit Sri Lanak</h3>-->
+        <div class="col-6" style="text-align: left">
+            <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
         </div>
         <div class="col-4">
             <div class="row">
-                <div class="col-4" style="text-align: center">
+                <div class="col-4" style="text-align: left">
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="places.html">Where To Go</a></li>
-                        <li><a href="hotels.html">Hotels</a></li>
+                        <li><a href="index.html" id="footerlink">Home</a></li>
+                        <li><a href="places.html" id="footerlink">Where To Go</a></li>
+                        <li><a href="hotels.html" id="footerlink">Hotels</a></li>
                     </ul>
                 </div>
 
-                <div class="col-4" style="text-align: center">
+                <div class="col-4" style="text-align: left">
                     <ul class="footer-links">
-                        <li><a href="Events.html">Cultural Festivals</a></li>
-                        <li><a href="news.html">Tousrism News</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
+                        <li><a href="news.html" id="footerlink">Tousrism News</a></li>
+                        <li><a href="about.html" id="footerlink">About Us</a></li>
                     </ul>
                 </div>
+            </div>
+            <br>
+            <div class="row" style="text-align: right;">
+                <img src="Assets/social/facebook.png" id="footericon">
+                <img src="Assets/social/whatsapp.png" id="footericon">
+                <img src="Assets/social/instagram.png" id="footericon">
+                <img src="Assets/social/twitter.png" id="footericon">
+                <img src="Assets/social/youtube.png" id="footericon">
+
             </div>
         </div>
 
 
     </div>
-    <hr>
+    <hr style="color: white">
     <div class="row">
         <div class="col-12" style="text-align: center">
-            <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
-                <a href="#">Travel Sri Lanka</a>.
+            <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
+                <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
             </p>
         </div>
     </div>
