--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/Main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countto/1.2.0/jquery.countTo.min.js"></script>
 </head>
 
 <body>
@@ -14,10 +16,13 @@
 
     <div class="header">
         <div class="wrap">
+
             <div class="logo">
+
                 <a href="index.html">
                     <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
                 </a>
+
             </div>
             <div class="top-nav">
                 <ul>
@@ -33,7 +38,6 @@
             <div class="clear"></div>
         </div>
     </div>
-
     <div class="row">
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -47,7 +51,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
                     <div class="carousel-caption d-none d-md-block" style="top: 50%;">
-                        <h1 style="font-family: Lobster;">Discover A Different Island</h1>
+                        <h1 style="font-family: Lobster; font-size: 100px">Discover A Different Island</h1>
                     </div>
                     <img src="Assets/slide/1.jpg" class="d-block w-100" alt="...">
 
@@ -55,13 +59,13 @@
                 <div class="carousel-item" data-bs-interval="2000">
                     <img src="Assets/slide/2.png" class="d-block w-100" alt="..." style="top: 50%;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1 style="font-family: Lobster;">Discover A Different Island</h1>
+                        <h1 style="font-family: Lobster; font-size: 100px"">Discover A Different Island</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="Assets/slide/3.jpg" class="d-block w-100" alt="..." style="top: 50%;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1 style="font-family: Lobster;">Discover A Different Island</h1>
+                        <h1 style="font-family: Lobster; font-size: 100px"">Discover A Different Island</h1>
                     </div>
                 </div>
             </div>
@@ -78,10 +82,22 @@
         </div>
     </div>
 
+    <br><br>
     <div class="row">
         <div class="col" style="background-color: white;color: #555;font-family: Arial, Helvetica, sans-serif;">
             <div class="wrap">
                 <h1>Ayubowan !<Br>Welcome to Sri Lanka</h1>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <video width="500" height="320" autoplay muted loop>
+                    <source src="Assets/Travel%20bg%20vid.mp4" type="video/mp4">
+                </video>
+            </div>
+            <div class="col-6" style="text-align: center; padding: 30px;">
                 <p>Ayubowan and Welcome back to the paradise island of Sri Lanka. As we open our doors to the world once
                     again ;
                     we've pulled out all the stops, ensuring that every precautionary measure has been set in place to
@@ -97,17 +113,9 @@
         </div>
     </div>
 
-    <br><br>
-
-    <div class="row">
-        <div class="col-12" style="margin-left: 50px;text-align: center">
-            <video id="slvideo" width="500" height="320" controls autoplay>
-                <source src="Assets/Travel%20bg%20vid.mp4" type="video/mp4">
-            </video>
-        </div>
-    </div>
 
     <br><br>
+
     <div class="row">
         <div class="col-12" style="height:200px;  background-image: url('Assets/visitarea.jpg');">
             <h1 style="color: #555">Places to Visit in Sri lanka</h1>
@@ -170,7 +178,37 @@
                 />
             </div>
             <div class="col-12" style="text-align: center">
-                <button class="btn btn-secondary" onclick="location.href='Places.html'">more</button>
+                <button class="btn btn-secondary" onclick="location.href='places.html'">more</button>
+            </div>
+        </div>
+    </div>
+    <br><br>
+
+
+
+    <div class="counter">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="tourists">
+                        <p class="counter-count">23000000</p>
+                        <p class="tourists-p">Tourists Per Year</p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="places">
+                        <p class="counter-count">1500</p>
+                        <p class="places-p">Places To Visit</p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="events">
+                        <p class="counter-count">20</p>
+                        <p class="events-p">Cultural Events</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -193,7 +231,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;height: auto">
                     <img src="Assets/fest1.jpg" class="card-img-top" alt="..." style="height: 200px">
                     <div class="card-body">
                         <p class="card-text">Poson</p>
@@ -201,7 +239,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;height: auto">
                     <img src="Assets/fest2.jpg" class="card-img-top" alt="..." style="height: 200px">
                     <div class="card-body">
                         <p class="card-text">Vesak</p>
@@ -209,7 +247,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;height: auto">
                     <img src="Assets/fest3.jpg" class="card-img-top" alt="..." style="height: 200px">
                     <div class="card-body">
                         <p class="card-text">Sinhala & Tamil New Year</p>
@@ -234,7 +272,7 @@
     <div class="container">
         <div class="row">
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem; ">
+                <div class="card" style="width: 18rem; height: 100%">
                     <img src="Assets/news/1-1.jpg" class="card-img-top" alt="..." style="height: 80%">
                     <div class="card-body">
                         <p class="card-text">The Joint Press Release by Sri Lanka Embassy in Germany, German Travel
@@ -243,7 +281,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem; ">
+                <div class="card" style="width: 18rem;height: 100%">
                     <img src="Assets/news/2-1.jpg" class="card-img-top" alt="..." style="height: 80%">
                     <div class="card-body">
                         <p class="card-text">TVN Discovery/National Geographic Traveler FAM Tour</p>
@@ -251,7 +289,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem; height: 100%">
                     <img src="Assets/news/3-2.jpg" class="card-img-top" alt="..." style="height: 80%">
                     <div class="card-body">
                         <p class="card-text">Sri Lanka Pavilion at Expo 2020 Dubai Welcomes Queens Baton Relay</p>
@@ -259,7 +297,7 @@
                 </div>
             </div>
             <div class="col-3" style="text-align: center">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 18rem;height: 100%">
                     <img src="Assets/news/4-1.jpg" class="card-img-top" alt="..." style="height: 80%">
                     <div class="card-body">
                         <p class="card-text">Sheikh Mohammed bin Rashid of the UAE and H.E. President Gotabaya Rajapaksa
@@ -271,53 +309,77 @@
         <br>
         <div class="row">
             <div class="col-12" style="text-align: center">
-                <button class="btn btn-secondary" onclick="location.href='News.html'">more</button>
+                <button class="btn btn-secondary" onclick="location.href='news.html'">more</button>
             </div>
         </div>
     </div>
     <br><br>
-    <footer class="site-footer" style="background-color: #4f5050">
+    <footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
         <br>
         <div class="row">
-            <div class="col-4" style="text-align: center">
-                <h3 style="font-family: Lobster">Visit Sri Lanak</h3>
+            <div class="col-2" style="text-align: right">
+                <img src="Assets/Favicon.png" style="height: auto; width: 40%">
             </div>
-            <div class="col-4" style="text-align: center">
-<!--                <h3 style="font-family: Lobster">Visit Sri Lanak</h3>-->
+            <div class="col-6" style="text-align: left">
+                <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
             </div>
             <div class="col-4">
                 <div class="row">
-                <div class="col-4" style="text-align: center">
-                    <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="places.html">Where To Go</a></li>
-                        <li><a href="hotels.html">Hotels</a></li>
-                    </ul>
-                </div>
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="index.html" id="footerlink">Home</a></li>
+                            <li><a href="places.html" id="footerlink">Where To Go</a></li>
+                            <li><a href="hotels.html" id="footerlink">Hotels</a></li>
+                        </ul>
+                    </div>
 
-                <div class="col-4" style="text-align: center">
-                    <ul class="footer-links">
-                        <li><a href="Events.html">Cultural Festivals</a></li>
-                        <li><a href="news.html">Tousrism News</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                    </ul>
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
+                            <li><a href="news.html" id="footerlink">Tousrism News</a></li>
+                            <li><a href="about.html" id="footerlink">About Us</a></li>
+                        </ul>
+                    </div>
                 </div>
+                <br>
+                <div class="row" style="text-align: right;">
+                    <img src="Assets/social/facebook.png" id="footericon">
+                    <img src="Assets/social/whatsapp.png" id="footericon">
+                    <img src="Assets/social/instagram.png" id="footericon">
+                    <img src="Assets/social/twitter.png" id="footericon">
+                    <img src="Assets/social/youtube.png" id="footericon">
+
                 </div>
             </div>
 
 
         </div>
-        <hr>
+        <hr style="color: white">
         <div class="row">
             <div class="col-12" style="text-align: center">
-                <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
-                    <a href="#">Travel Sri Lanka</a>.
+                <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
                 </p>
             </div>
         </div>
     </footer>
 </div>
 
+<script>
+    $('.counter-count').each(function () {
+        $(this).prop('Counter',0).animate({
+            Counter: $(this).text()
+        }, {
+            duration: 5000,
+            easing: 'swing',
+            step: function (now) {
+                $(this).text(Math.ceil(now));
+            }
+        });
+    });
+
+
+</script>
 <!--<script id="replace_with_navbar" src="Navigation Bars\footer.js"></script>-->
 </body>
 <!--quick go to top button-->
